--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A czech habbit holding streak tracking web app">
+    <meta name="theme-color" content="#dbdcf0">
     <script type="module" src="/src/main.ts" defer></script>
     <link rel="stylesheet" href="/src/style.css">
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="shortcut icon" href="/icon/96-fav.png" type="image/png">
     <title>Streak</title>
 </head>
 <body>
