--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/src/main.ts" defer></script>
     <link rel="stylesheet" href="/src/style.css">
     <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="shortcut icon" href="/icon/96-fav.png" type="image/png">
+    <link rel="shortcut icon" href="/icon/96-full.png" type="image/png">
     <title>Streak</title>
 </head>
 <body>
