make encrypted online backups to firebase rtdb, implement firebase rest auth, make button progress animations

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <section id="backup">
       <button id="restore-backup" class="outlined">Obnovit</button>
       <button id="save-backup">Uložit</button>
+      <button id="download-backup" class="outlined" style="display: none">Stáhnout</button>
+      <button id="upload-backup" style="display: none">Nahrát</button>
+      <hr>
+      <input type="password" id="backup-key" placeholder="Uživatelský klíč">
+      <button id="copy-backup-key" class="outlined icon">📋</button>
+      <button id="login" class="outlined" type="submit">Registrovat</button>
     </section>
     <footer class="errors">
     </footer>
